increased form fields font size to  prevent zooming on mobile devlices

--- a/frontend/src/App/styles.css
+++ b/frontend/src/App/styles.css
@@ -65,6 +65,14 @@ body {
   border-radius: 5px;
 }
 
+@media only screen and (max-width: 768px) {
+  .form input,
+  .form button,
+  .form textarea {
+    font-size: 16px;
+  }
+}
+
 .form button {
   margin-top: 20px;
 }
